--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
-#heading{
-    color: aqua;
+.header{
+    border: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 150px;
+}
+
+.nav-items{
+    padding: 0px 25px;
+}
+.nav-items > ul{
+    display: flex;
+    list-style-type: none;
+    
+}
+
+.nav-items > ul > li {
+    padding: 27px;
+    font-size: 17px;
+}
+.res-card{
+    width: 200px;
+    background: rgb(155, 192, 230);
+    padding: 3px;
+    margin: 10px;
+}
+.res-card > h3{
+    padding: 0px;
+    margin:  5px;
+}
+.res-card > h5{
+    padding: 0px;
+    margin: 3px;    
+}
+.res-card:hover{
+    border: 1px solid rgb(54, 53, 53);
+    background-color: rgb(149, 234, 240);
+    cursor: pointer;
+    border-radius: 3%;
+}
+.filter{
+    margin: 20px;
+    cursor: pointer;
+}
+
+.res-logo{
+    width: 100%;
+    height: 150px;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
 }
