--- a/index.css
+++ b/index.css
@@ -21,9 +21,10 @@
     padding: 27px;
     font-size: 17px;
 }
+
 .res-card{
     width: 200px;
-    background: rgb(155, 192, 230);
+    background: rgb(244, 247, 250);
     padding: 3px;
     margin: 10px;
 }
@@ -41,11 +42,6 @@
     cursor: pointer;
     border-radius: 3%;
 }
-.filter{
-    margin: 20px;
-    cursor: pointer;
-}
-
 .res-logo{
     width: 100%;
     height: 150px;
@@ -55,10 +51,36 @@
     flex-wrap: wrap;
 }
 
+.filter{
+    margin: 20px;
+    cursor: pointer;
+}
+
 .shimmer-container{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 60px;
 }
-.shimCard{
-    background: rgb(231, 228, 228);
+
+.shim-card{
+    width: 200px;
+    height: 325px;
+    background: rgb(244, 247, 250);
+    padding: 3px;
+    margin: 10px;
+}
+.shim-logo{
+    width: 200px;
+    height: 150px;
+    background: rgb(225, 226, 226);
+}
+.shim-card > h3{
+    padding: 0px;
+    margin:  5px;
+    background: rgb(244, 247, 250);
+}
+.shim-card > h5{
+    padding: 0px;
+    margin: 3px;  
+    background: rgb(226, 230, 234);  
 }
